实现按用户名获取用户信息
