# api/v1/routes.py
@@ -13,6 +13,7 @@ from .resources.advertisements import Advertisements
 from .resources.products import Products
 from .resources.product import Product
 from .resources.accounts import Accounts
+from .resources.account_username import AccountUsername
 
 
 routes = [
@@ -21,4 +22,5 @@ routes = [
     dict(resource=Products, urls=['/products'], endpoint='products'),
     dict(resource=Product, urls=['/products/<int:productId>'], endpoint='product'),
     dict(resource=Accounts, urls=['/accounts'], endpoint='accounts'),
+    dict(resource=AccountUsername, urls=['/account/<username>'], endpoint='account_username'),
 ]
