# swagger.yaml
@@ -124,6 +124,56 @@ paths:
                 type: integer
               message:
                 type: string
+  /account/{username}:
+    get:
+      tags:
+        - Account
+      produces:
+        - application/json
+      parameters:
+        - name: username
+          in: path
+          type: string
+          required: True
+      responses:
+        "200":
+          description: 成功返回用户个人跟信息
+          schema:
+            example:
+              id: 1
+              username: icyfenix
+              name: 周志明
+              avatar: ''
+              telephone: '18888888888'
+              email: icyfenix@gmail.com
+              location: 唐家湾港湾大道科技一路3号远光软件股份有限公司
+            properties:
+              id:
+                type: integer
+              username:
+                type: string
+              name:
+                type: string
+              avatar:
+                type: string
+              telephone:
+                type: string
+              email:
+                type: string
+              location:
+                type: string
+        "404":
+          description: 按用户名查找用户失败，即用户不存在
+          schema:
+            example:
+              code: -1
+              message: 按用户名查找用户失败，即用户不存在
+            type: object
+            properties:
+              code: 
+                type: integer
+              message:
+                type: string
 definitions:
   advertisementsModel:
     type: array
